MEN09-276 #close Maintenance [Fix Bugs]